--- a/.gitignore
+++ b/.gitignore
@@ -57,9 +57,9 @@ coverage.xml
 *.log
 
 # Sphinx documentation
-_build/doctrees
-_build/html/_*
-_build/html/.buildinfo
+docs/doctrees
+docs/html/_*
+docs/html/.buildinfo
 conf.py
 *.rst
 [M|m]ake*
