--- a/.gitignore
+++ b/.gitignore
@@ -57,9 +57,9 @@ coverage.xml
 *.log
 
 # Sphinx documentation
-source/*
-[M|m]ake*
-docs/doctrees
+docs/_build/doctrees
+*.rst*
+[m|M]ake*
 
 
 # PyBuilder
